--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 	    position: absolute;
 	    top: 0;
 	    left: 100%; /* Position it beside the text */
-	    margin-left: 15px;
+	    margin-right: 15px;
 	    width: 50px; /* Adjust the size */
 	    height: 50px; /* Adjust the size */
 	    object-fit: cover;
