--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     <div class="modal" id="projectsModal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Support Our Projects</h2>
+                <h2>Coming soon........</h2>
                 <button onclick="closeProjectsModal()">Close</button>
             </div>
             <ul class="project-list">
