--- a/index.html
+++ b/index.html
@@ -313,32 +313,14 @@
 	    border-radius: 5px; /* Optional, to round the corners of the image */
 	}
 	
-	/* Style the progress bar container */
-	.progress-bar {
-	    width: 100%;
-	    height: 20px; /* Height of the progress bar */
-	    background-color: #e0e0e0; /* Light grey background */
-	    border-radius: 10px; /* Rounded corners */
-	    margin-top: 10px; /* Space above the progress bar */
-	}
+	
 	.project-item span {
 	    font-size: 1.1em;
 	    flex-grow: 1;
 	}
-	/* Style for the progress itself */
-	.progress {
-	    height: 100%; /* Full height of the progress bar */
-	    background-color: #4caf50; /* Green color for the progress */
-	    border-radius: 10px; /* Rounded corners for the progress bar */
-	    text-align: center;
-	    color: white;
-	    line-height: 20px; /* Center the text vertically */
-	    font-weight: bold;
-	    width: 0%; /* Default progress is 0% */
-	}
 	
 	/* Modal adjustments */
-	.project-details-modal .progress-bar {
+	.project-details-modal {
 	    margin-bottom: 20px;
 	}
 
