--- a/index.html
+++ b/index.html
@@ -470,13 +470,13 @@
                 projectDetails = `
                     <p>This project focuses on developing sustainable energy solutions.</p>
                 
-                    <button class="show-donations-btn" onclick="showQRCode('ETH_Address_2')">Donate</button>
+                    <center><button class="show-donations-btn" onclick="showQRCode('ETH_Address_2')">Donate</button></center>
                 `;
             } else if (projectId === 'WebAid for NPOs') {
                 projectDetails = `
                     <p>This project supports NPOs by building customized websites to help them raise funds and engage with the community.</p>
                    
-                    <button class="show-donations-btn" onclick="showQRCode('ETH_Address_3')">Donate</button>
+                    <center><button class="show-donations-btn" onclick="showQRCode('ETH_Address_3')">Donate</button></center>
                 `;
             }
             document.getElementById('projectDetailsContent').innerHTML = projectDetails;
