--- a/index.html
+++ b/index.html
@@ -474,7 +474,29 @@
                 `;
             } else if (projectId === 'WebAid for NPOs') {
                 projectDetails = `
-                    <p>This project supports NPOs by building customized websites to help them raise funds and engage with the community.</p>
+                    <p>Project Name: WebAid
+Objective: To empower Non-Profit Organizations (NPOs), community centers, churches, and community clubs by providing affordable and professional websites to enhance their online presence, improve engagement, and facilitate their missions effectively.
+
+Key Features:
+
+Customizable Templates: Tailored designs to suit specific needs and branding.
+Donation Pages: Secure and user-friendly platforms to receive contributions.
+Event Calendar: Tools for scheduling and promoting events.
+Volunteer Signups: Forms to recruit and manage volunteers efficiently.
+SEO Optimization: Boost online visibility to reach a wider audience.
+Analytics: Insights to measure website traffic, donations, and engagement.
+Target Audience: Non-profits, community-focused organizations, and clubs seeking to enhance their digital footprint with user-friendly, mobile-responsive, and easy-to-manage websites.
+
+Timeline:
+
+Planning: 1–2 months
+Development: 3–6 months
+Ongoing Support: Continuous assistance for maintenance and updates.
+Success Metrics: Increased engagement, funds raised, volunteer participation, and user satisfaction.
+
+Resources Required: Web designers, developers, CMS tools, and ongoing technical support.
+
+Impact: WebAid aims to empower communities by providing digital tools to connect with their audience, drive participation, and achieve their goals effectively</p>
                    
                     <center><button class="show-donations-btn" onclick="showQRCode('ETH_Address_3')">Donate</button></center>
                 `;
