--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
                 `;
             } else if (projectId === 'WebAid for NPOs') {
                 projectDetails = `
-                    <p>Project Name: WebAid
-Objective: To empower Non-Profit Organizations (NPOs), community centers, churches, and community clubs by providing affordable and professional websites to enhance their online presence, improve engagement, and facilitate their missions effectively.
+                    <p><b>Project Name: WebAid</b></p><br/>
+		    <p><b>Objective:</b> To empower Non-Profit Organizations (NPOs), community centers, churches, and community clubs by providing affordable and professional websites to enhance their online presence, improve engagement, and facilitate their missions effectively.</p><br/>
 
 Key Features:
 
