--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 </li>
                 <!-- Project 3 -->
                 <li class="project-item" onmouseover="showProjectInfo('WebAid for NPOs')" onmouseout="hideProjectInfo()">
-                    <img src="project3-thumbnail.jpg" alt="Project 3 Thumbnail" class="project-thumbnail">
+                    <img src="WebAid.png" alt="Project 3 Thumbnail" class="project-thumbnail">
                     <span class="project-name" onclick="openProjectDetails('WebAid for NPOs')">WebAid for NPOs: Empowering Non-Profits with Technology</span>
                 </li>
             </ul>
