--- a/index.html
+++ b/index.html
@@ -477,26 +477,26 @@
                     <p><b>Project Name: WebAid</b></p><br/>
 		    <p><b>Objective:</b> To empower Non-Profit Organizations (NPOs), community centers, churches, and community clubs by providing affordable and professional websites to enhance their online presence, improve engagement, and facilitate their missions effectively.</p><br/>
 
-Key Features:
+		    <p><b>Key Features:</b></p><br/>
 
-Customizable Templates: Tailored designs to suit specific needs and branding.
-Donation Pages: Secure and user-friendly platforms to receive contributions.
-Event Calendar: Tools for scheduling and promoting events.
-Volunteer Signups: Forms to recruit and manage volunteers efficiently.
-SEO Optimization: Boost online visibility to reach a wider audience.
-Analytics: Insights to measure website traffic, donations, and engagement.
-Target Audience: Non-profits, community-focused organizations, and clubs seeking to enhance their digital footprint with user-friendly, mobile-responsive, and easy-to-manage websites.
+		<p>Customizable Templates: Tailored designs to suit specific needs and branding.<br />
+		Donation Pages: Secure and user-friendly platforms to receive contributions.<br />
+		Event Calendar: Tools for scheduling and promoting events.<br />
+		Volunteer Signups: Forms to recruit and manage volunteers efficiently.<br />
+		SEO Optimization: Boost online visibility to reach a wider audience.<br />
+		Analytics: Insights to measure website traffic, donations, and engagement.<br />
+		Target Audience: Non-profits, community-focused organizations, and clubs seeking to enhance their digital footprint with user-friendly, mobile-responsive, and easy-to-manage websites.</p><br />
 
-Timeline:
+		<p><b>Timeline:</b></p><br />
 
-Planning: 1–2 months
-Development: 3–6 months
-Ongoing Support: Continuous assistance for maintenance and updates.
-Success Metrics: Increased engagement, funds raised, volunteer participation, and user satisfaction.
+		<p>Planning: 1–2 months<br />
+		Development: 3–6 months<br />
+		Ongoing Support: Continuous assistance for maintenance and updates.<br />
+		Success Metrics: Increased engagement, funds raised, volunteer participation, and user satisfaction.</p><br />
 
-Resources Required: Web designers, developers, CMS tools, and ongoing technical support.
+		<p><b>Resources Required:</b> Web designers, developers, CMS tools, and ongoing technical support.</p><br />
 
-Impact: WebAid aims to empower communities by providing digital tools to connect with their audience, drive participation, and achieve their goals effectively</p>
+		<p><b>Impact:</b> WebAid aims to empower communities by providing digital tools to connect with their audience, drive participation, and achieve their goals effectively</p><br />
                    
                     <center><button class="show-donations-btn" onclick="showQRCode('ETH_Address_3')">Donate</button></center>
                 `;
