--- a/index.html
+++ b/index.html
@@ -336,6 +336,9 @@
 	/* Modal adjustments */
 	.project-details-modal {
 	    margin-bottom: 20px;
+	    overflow-y: auto;
+	    max-height: 90vh; /* Limit modal height */
+            overflow-y: auto; /* Add scroll functionality */
 	}
 
     </style>
