--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         // Show QR Code Modal
         function showQRCode(address) {
             const qrCodeModal = document.getElementById('qrCodeModal');
-            qrCodeModal.style.display = 'flex';
+            qrCodeModal.style.display = 'block';
             const qrCodeImage = document.getElementById('qrCodeImage');
             if (address === 'ETH_Address_1') {
                 qrCodeImage.src = 'eth_qr_code_1.png';
