--- a/index.html
+++ b/index.html
@@ -468,6 +468,9 @@
                     <p>This project aims to provide digital education resources to underprivileged communities.</p>
                    
                     <center><button class="show-donations-btn" onclick="showQRCode('ETH_Address_1')">Donate</button></center>
+		    <div id="qrCodeModalr" style="display: none; text-align: center; margin-top: 20px;">
+			    <img id="qrCodeImage" src="" alt="QR Code">
+		    </div>
                 `;
             } else if (projectId === 'Project 2') {
                 projectDetails = `
