--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <meta name="author" content="THQ Cyber Division Unincorporated">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#007bff">
-    <script>
+    <div id="google_translate_element"></div>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+<script>
         // Register the service worker
 	if ('serviceWorker' in navigator) {
 	  navigator.serviceWorker.register('/service-worker.js').then((registration) => {
