--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="THQ Cyber Division Unincorporated is a leading IT solutions provider offering innovative, secure, and efficient technology services for businesses of all sizes. Empower your business with our expertise.">
     <meta name="keywords" content="THQ Cyber Division, IT solutions, technology services, digital transformation, cybersecurity, innovative IT services">
     <meta name="author" content="THQ Cyber Division Unincorporated">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
     <meta name="theme-color" content="#007bff">
     
 
@@ -62,10 +62,10 @@
 
     </script>
     <title>About Us - THQ Cyber Division Unincorporated</title>
-	<link rel="icon" type="image/png" sizes="16x16" href="favicon_16x16.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="favicon_32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="favicon_96x96.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_96x96.png">
     <style>
         body {
             font-family: Arial, sans-serif;
