--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="THQ Cyber Division Unincorporated">
     <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
     <meta name="theme-color" content="#007bff">
-    
+    <script>
 
         // Register the service worker
 	if ('serviceWorker' in navigator) {
