--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
         // Register the service worker
 	if ('serviceWorker' in navigator) {
-	  navigator.serviceWorker.register('/service-worker.js').then((registration) => {
+	  navigator.serviceWorker.register('https://thqcyberdivision.github.io/service-worker.js').then((registration) => {
 	    console.log('Service Worker registered');
 	    
 	    // Listen for updates to the service worker
@@ -152,14 +152,14 @@
     <script>
     <header>
 	     <a href="index.html">
-        <img src="logo.png" alt="THQ Logo">
+        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
 	     </a>
         <h1>About Us - THQ Cyber Division</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
+        <a href="https://thqcyberdivision.github.io/index.html">Home</a>
+        <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
+        <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     </nav>
     <main>
         <h1>Our Mission and Vision</h1>
@@ -176,10 +176,10 @@
     <footer>
         <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
         <a href="mailto:thqcs@protonmail.com">
-            <img src="email-icon.png" alt="Email Icon" title="Send us an email">
+            <img src="https://thqcyberdivision.github.io/email-icon.png" alt="Email Icon" title="Send us an email">
         </a>
         <a href="skype:live:.cid.5de4365cebf8c90d">
-            <img src="skype-icon.png" alt="Skype Icon" title="Chat with us on Skype">
+            <img src="https://thqcyberdivision.github.io/skype-icon.png" alt="Skype Icon" title="Chat with us on Skype">
         </a>
     </footer>
 </body>
