--- a/about.html
+++ b/about.html
@@ -7,13 +7,20 @@
     <meta name="description" content="THQ Cyber Division Unincorporated is a leading IT solutions provider offering innovative, secure, and efficient technology services for businesses of all sizes. Empower your business with our expertise.">
     <meta name="keywords" content="THQ Cyber Division, IT solutions, technology services, digital transformation, cybersecurity, innovative IT services">
     <meta name="author" content="THQ Cyber Division Unincorporated">
-    <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#007bff">
+    <div id="google_translate_element"></div>
+    <script type="text/javascript">
+	    function googleTranslateElementInit() {
+	        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+	    }
+	</script>
+	<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-<script>
+    <script>
         // Register the service worker
 	if ('serviceWorker' in navigator) {
-	  navigator.serviceWorker.register('https://thqcyberdivision.github.io/service-worker.js').then((registration) => {
+	  navigator.serviceWorker.register('/service-worker.js').then((registration) => {
 	    console.log('Service Worker registered');
 	    
 	    // Listen for updates to the service worker
@@ -62,10 +69,10 @@
 
     </script>
     <title>About Us - THQ Cyber Division Unincorporated</title>
-	<link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon_16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon_32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="favicon_96x96.png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -141,25 +148,16 @@
     </style>
 </head>
 <body>
-	<div id="google_translate_element"></div>
-	<script type="text/javascript">
-	    function googleTranslateElementInit() {
-	        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-	    }
-	</script>
-	<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
-    
     <header>
 	     <a href="index.html">
-        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
+        <img src="logo.png" alt="THQ Logo">
 	     </a>
         <h1>About Us - THQ Cyber Division</h1>
     </header>
     <nav>
-        <a href="https://thqcyberdivision.github.io/index.html">Home</a>
-        <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
-        <a href="https://thqcyberdivision.github.io/services.html">Services</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="services.html">Services</a>
     </nav>
     <main>
         <h1>Our Mission and Vision</h1>
@@ -176,12 +174,11 @@
     <footer>
         <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
         <a href="mailto:thqcs@protonmail.com">
-            <img src="https://thqcyberdivision.github.io/email-icon.png" alt="Email Icon" title="Send us an email">
+            <img src="email-icon.png" alt="Email Icon" title="Send us an email">
         </a>
         <a href="skype:live:.cid.5de4365cebf8c90d">
-            <img src="https://thqcyberdivision.github.io/skype-icon.png" alt="Skype Icon" title="Chat with us on Skype">
+            <img src="skype-icon.png" alt="Skype Icon" title="Chat with us on Skype">
         </a>
     </footer>
 </body>
 </html>
-
