--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
         <h1>Welcome to THQ Cyber Division</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
+        <a href="https://thqcyberdivision.github.io/index.html">Home</a>
+        <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
+        <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     </nav>
     <main>
         <h1>Empowering Your Digital Transformation</h1>
