--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
 </head>
 <body>
     <header>
-	     <a href="index.html">
+	     <a href="https://thqcyberdivision.github.io/index.html">
         <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
 	     </a>
         <h1>About Us - THQ Cyber Division</h1>
