--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 <script>
         // Register the service worker
 	if ('serviceWorker' in navigator) {
-	  navigator.serviceWorker.register('/service-worker.js').then((registration) => {
+	  navigator.serviceWorker.register('https://thqcyberdivision.github.io/service-worker.js').then((registration) => {
 	    console.log('Service Worker registered');
 	    
 	    // Listen for updates to the service worker
@@ -62,7 +62,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
     <style>
                 body {
             font-family: Arial, sans-serif;
@@ -149,15 +149,15 @@
 	<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <header>
-         <a href="index.html">
-        <img src="logo.png" alt="THQ Logo">
+         <a href="https://thqcyberdivision.github.io/index.html">
+        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
 	     </a>
         <h1>Our Services</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
+        <a href="https://thqcyberdivision.github.io/index.html">Home</a>
+        <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
+        <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     </nav>
     <main>
         <h1>Explore Our Expertise</h1>
@@ -182,10 +182,10 @@
     <footer>
         <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
         <a href="mailto:thqcs@protonmail.com">
-            <img src="email-icon.png" alt="Email Icon" title="Send us an email">
+            <img src="https://thqcyberdivision.github.io/email-icon.png" alt="Email Icon" title="Send us an email">
         </a>
         <a href="skype:live:.cid.5de4365cebf8c90d">
-            <img src="skype-icon.png" alt="Skype Icon" title="Chat with us on Skype">
+            <img src="https://thqcyberdivision.github.io/skype-icon.png" alt="Skype Icon" title="Chat with us on Skype">
         </a>
     </footer>
 </body>
