--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
 	
 
     </script>
+    <script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+
+  	if (window.location.hostname === "https://thqcyberdivision.github.io/") {
+      		gtag('config', 'G-XXXXXXXXXX');
+  	}
+    </script>
+
     <title>Home - THQ Cyber Division Unincorporated</title>
 	<link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
