--- a/index.html
+++ b/index.html
@@ -61,16 +61,15 @@
 	
 
     </script>
-    <script>
-  	window.dataLayer = window.dataLayer || [];
-  	function gtag(){dataLayer.push(arguments);}
-  	gtag('js', new Date());
-
-  	if (window.location.hostname === "https://thqcyberdivision.github.io/") {
-      		gtag('config', 'G-XXXXXXXXXX');
-  	}
-    </script>
-
+	    <!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T83TYG9SG6"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-T83TYG9SG6');
+	</script>
     <title>Home - THQ Cyber Division Unincorporated</title>
 	<link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
