--- a/about.html
+++ b/about.html
@@ -10,6 +10,16 @@
     <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
     <meta name="theme-color" content="#007bff">
     <div id="google_translate_element"></div>
+
+	    <!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T83TYG9SG6"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-T83TYG9SG6');
+	</script>
     <script type="text/javascript">
 	    function googleTranslateElementInit() {
 	        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
