--- a/services.html
+++ b/services.html
@@ -8,7 +8,17 @@
     <meta name="author" content="THQ Cyber Division Unincorporated">
     <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
     <meta name="theme-color" content="#007bff">
-	
+
+ 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T83TYG9SG6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T83TYG9SG6');
+</script>	
 <script>
         // Register the service worker
 	if ('serviceWorker' in navigator) {
