--- a/index.html
+++ b/index.html
@@ -420,6 +420,18 @@
 			</a>
                     </div>
                 </li>
+		<li class="book-item">
+                    <img src="book3-icon.png" alt="Ebook Icon">
+                    <span>Manual for Managing Your Own International Affairs</span>
+                    <div class="icons">
+                        <a href="https://ipfs.io/ipfs/QmcvL5WBq8eNDCYqy1XZhcGPY7KJQbQ5Rp1GWptuzbD89X" target="_blank">
+                        <img src="pdf-icon.png" alt="PDF Icon" class="icon">
+			</a>
+                        <a href="https://ipfs.io/ipfs/QmP9xFwakZGKSbyvmAnSuV3uiLk8zgdZChrUoyWJee53vA" target="_blank">
+                        <img src="epub-icon.png" alt="EPUB Icon" class="icon">
+			</a>
+                    </div>
+                </li>
                 <!-- More books can be added here -->
             </ul>
         </div>
