--- a/index.html
+++ b/index.html
@@ -421,10 +421,10 @@
                     </div>
                 </li>
 		<li class="book-item">
-                    <img src="book3-icon.png" alt="Ebook Icon">
+                    <img src="https://ipfs.io/ipfs/Qmf1DG3xCCAJQCcZjjGuKaotzJvNm8huYXVfYqhe3EZJoH" alt="Ebook Icon">
                     <span>Manual for Managing Your Own International Affairs</span>
                     <div class="icons">
-                        <a href="https://ipfs.io/ipfs/QmcvL5WBq8eNDCYqy1XZhcGPY7KJQbQ5Rp1GWptuzbD89X" target="_blank">
+                        <a href="https://ipfs.io/ipfs/QmYjPwWKZX7tsTP3DPkhAyUHo6SCzcjNEdcur1ba7RuxYB" target="_blank">
                         <img src="pdf-icon.png" alt="PDF Icon" class="icon">
 			</a>
                         <a href="https://ipfs.io/ipfs/QmP9xFwakZGKSbyvmAnSuV3uiLk8zgdZChrUoyWJee53vA" target="_blank">
