--- a/index.html
+++ b/index.html
@@ -543,30 +543,34 @@
                    
                     <center><button class="show-donations-btn" onclick="showQRCode('ETH_Address_3')">Donate</button></center>
                 `;
-            }else if (projectId === 'Jewelry Stores') {
+            }else if (projectId === 'Jewelery Stores') {
 		    projectDetails = `
-		        <p><b>Project Name: CKS Fashion Collection</b></p><br/>
-		        <p><b>Objective:</b> To create and promote ethically inspired fashion items including apparel, accessories, and lifestyle goods through an accessible and user-friendly digital store.</p><br/>
+		        <p><b>Project Name:</b> CKS Collection Unincorporated</p><br/>
+		        <p><b>Objective:</b> To showcase and supply high-quality natural gemstones, including Sapphire, Spinel, Ruby, Emerald, Tourmaline, Morganite, and Garnet, through a trusted and accessible online platform: <a href="https://cksfashioncollection.sell.app" target="_blank">cksfashioncollection.sell.app</a>.</p><br/>
 		
-		        <p><b>Key Highlights:</b></p><br/>
-		        <p>• Trendy and Affordable Fashion: A curated collection of stylish, modern outfits.<br/>
-		        • Online Store: Built on Sell.app for secure checkout and product management.<br/>
-		        • Brand Identity: Reflects culture, creativity, and community empowerment.<br/>
-		        • Social Enterprise: A percentage of profits goes to local community projects and youth empowerment.</p><br/>
+		        <p><b>Key Features:</b></p><br/>
+		        <p>
+		            • Genuine Gemstones: Ethically sourced and professionally inspected.<br/>
+		            • Digital Storefront: Secure, user-friendly shopping experience.<br/>
+		            • Appraisal & Certification: Optional gemstone appraisal certificates.<br/>
+		            • Educational Content: Resources for buyers to learn about gem types and value.<br/>
+		            • Global Access: Serving collectors, jewelers, and enthusiasts worldwide.
+		        </p><br/>
 		
-		        <p><b>Target Audience:</b> Fashion lovers, online shoppers, and conscious consumers seeking meaningful purchases.</p><br/>
+		        <p><b>Target Audience:</b> Jewelers, gemstone collectors, crystal enthusiasts, and gift buyers looking for authentic, affordable, and beautiful natural gemstones.</p><br/>
 		
 		        <p><b>Timeline:</b><br/>
-		        Launch: Complete (Live at <a href="https://cksfashioncollection.sell.app" target="_blank">cksfashioncollection.sell.app</a>)<br/>
-		        Expansion: Ongoing with new collections, promotions, and partnerships.</p><br/>
+		        Store Launch: Completed and live.<br/>
+		        Expansion: Adding new inventory, educational materials, and downloadable certificates.</p><br/>
 		
-		        <p><b>Support Needed:</b> Social media shares, brand ambassadors, and donations to scale production and marketing reach.</p><br/>
+		        <p><b>Support Needed:</b> Marketing, partnerships, customer referrals, and donations to expand sourcing, packaging, and certification capabilities.</p><br/>
 		
-		        <p><b>Impact:</b> Promotes local talent, supports social causes, and delivers value through fashion with purpose.</p><br/>
+		        <p><b>Impact:</b> CKS Collection Unincorporated empowers micro-traders, educates consumers, and provides access to the natural beauty and investment value of gemstones.</p><br/>
 		
 		        <center><button class="show-donations-btn" onclick="showQRCode('ETH_Address_4')">Donate</button></center>
 		    `;
 		}
+
 
             document.getElementById('projectDetailsContent').innerHTML = projectDetails;
             document.getElementById('projectDetailsModal').style.display = 'flex';
