--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                    
                     <center><button class="show-donations-btn" onclick="showQRCode('ETH_Address_3')">Donate</button></center>
                 `;
-            }else if (projectId === 'Jewelery Stores') {
+            }else if (projectId === 'CKS Collection') {
 		    projectDetails = `
 		        <p><b>Project Name:</b> CKS Collection Unincorporated</p><br/>
 		        <p><b>Objective:</b> To showcase and supply high-quality natural gemstones, including Sapphire, Spinel, Ruby, Emerald, Tourmaline, Morganite, and Garnet, through a trusted and accessible online platform: <a href="https://cksfashioncollection.sell.app" target="_blank">cksfashioncollection.sell.app</a>.</p><br/>
