--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 				<!-- Project 4 -->
 		<li class="project-item" onmouseover="showProjectInfo('CKS Collection')" onmouseout="hideProjectInfo()">
 		    <img src="cks-thumbnail.jpg" alt="CKS Collection Thumbnail" class="project-thumbnail">
-		    <span class="project-name" onclick="openProjectDetails('Jewelry Stores')">Jewelry Stores: Empowering Fashion with a Purpose</span>
+		    <span class="project-name" onclick="openProjectDetails('CKS Collection')">Jewelry Stores: Empowering Fashion with a Purpose</span>
 		</li>
             </ul>
         </div>
