--- a/index.html
+++ b/index.html
@@ -460,9 +460,9 @@
                     <img src="WebAid.png" alt="Project 3 Thumbnail" class="project-thumbnail">
                     <span class="project-name" onclick="openProjectDetails('WebAid for NPOs')">WebAid for NPOs: Empowering Non-Profits with Technology</span>
                 </li>
-				<!-- Project 4 -->
+				<!-- Project 1 -->
 		<li class="project-item" onmouseover="showProjectInfo('CKS Collection')" onmouseout="hideProjectInfo()">
-		    <img src="cks-thumbnail.jpg" alt="CKS Collection Thumbnail" class="project-thumbnail">
+		    <img src="https://ipfs.io/ipfs/Qmboo72AF6ho8h4zgw3RbPM6CBjz2CQtUjxF7Ypv1ZK7om" alt="CKS Collection Thumbnail" class="project-thumbnail">
 		    <span class="project-name" onclick="openProjectDetails('CKS Collection')">Jewelry Stores: Empowering Fashion with a Purpose</span>
 		</li>
             </ul>
