--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                 </li>
 				<!-- Project 1 -->
 		<li class="project-item" onmouseover="showProjectInfo('CKS Collection')" onmouseout="hideProjectInfo()">
-		    <img src="https://ipfs.io/ipfs/Qmboo72AF6ho8h4zgw3RbPM6CBjz2CQtUjxF7Ypv1ZK7om" alt="CKS Collection Thumbnail" class="project-thumbnail">
+		    <img src="Logo.png" alt="CKS Collection Thumbnail" class="project-thumbnail">
 		    <span class="project-name" onclick="openProjectDetails('CKS Collection')">Jewelry Stores: Empowering Fashion with a Purpose</span>
 		</li>
             </ul>
